# orange-ffmpeg

./: .gitignore  README.md
ffmpeg-cmd/encode/: README.md
ffmpeg-cmd/filter/: README.md
ffmpeg-code/ffdemux/: CMakeLists.txt  ffmuxfile.cpp  ffmuxfile.h  hello.cpp
ffmpeg-code/ffmuxfile/: CMakeLists.txt  ffmuxfile.cpp  ffmuxfile.h  hello.cpp
ffmpeg-code/ffmuxfile/doc/: 1.aac  1.h264
ffmpeg-code/ffvencode/: CMakeLists.txt  ffvencode.cpp  ffvencode.h  hello.cpp
ffmpeg-code/ffvencode/doc/: 544x816.h264
ffmpeg-code/swscale/: CMakeLists.txt  README.md  ffscale.cpp  ffscale.h  hello.cpp
ffmpeg-code/swscale/doc/: 544x816.rgba
ffmpeg-libs/: README.md
ffmpeg-libs/darwin/fdk-aac/lib/: libfdk-aac.la
ffmpeg-libs/darwin/fdk-aac/lib/pkgconfig/: fdk-aac.pc
ffmpeg-libs/darwin/ffmpeg/include/libavutil/: ffversion.h
ffmpeg-libs/darwin/ffmpeg/lib/: README.md
ffmpeg-libs/darwin/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg-libs/darwin/ffmpeg/share/doc/ffmpeg/: developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  ffprobe.html  ffserver-all.html  ffserver.html  general.html  git-howto.html  libavcodec.html  libavdevice.html  libavfilter.html  libavformat.html  libavutil.html  libswresample.html  libswscale.html  mailing-list-faq.html  nut.html  platform.html
ffmpeg-libs/darwin/ffmpeg/share/man/man1/: ffplay-all.1  ffplay.1
ffmpeg-libs/darwin/x264/lib/pkgconfig/: x264.pc
ffmpeg-libs/shared/fdk-aac/lib/: libfdk-aac.la
ffmpeg-libs/shared/fdk-aac/lib/pkgconfig/: fdk-aac.pc
ffmpeg-libs/shared/ffmpeg/include/libavutil/: ffversion.h
ffmpeg-libs/shared/ffmpeg/lib/: libavdevice.so.57.10.100  libavfilter.so.6.107.100  libavformat.so.57.83.100  libavutil.so.55.78.100  libpostproc.so.54.7.100  libswresample.so.2.9.100  libswscale.so.4.8.100
ffmpeg-libs/shared/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg-libs/shared/ffmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg.1  ffprobe-all.1  ffserver-all.1  (+1 more)
ffmpeg-libs/shared/x264/lib/: libx264.so.155
ffmpeg-libs/shared/x264/lib/pkgconfig/: x264.pc
ffmpeg-libs/src/fdk-aac/: Makefile.in  configure
ffmpeg-libs/src/fdk-aac/autom4te.cache/: output.3  output.4  requests  traces.0  traces.2  traces.3  traces.4  traces.5
ffmpeg-libs/static/fdk-aac/lib/: libfdk-aac.la
ffmpeg-libs/static/fdk-aac/lib/pkgconfig/: fdk-aac.pc
ffmpeg-libs/static/ffmpeg/lib/: README.md
ffmpeg-libs/static/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg-libs/static/x264/lib/pkgconfig/: x264.pc
ffmpeg-libs/windll/libyuv/lib/: yuv.lib
(+14 files in other folders)
